# XRVST_Plugins

./: .gitignore  CMakeLists.txt  README.md  XRVST_Plugins.jucer  build.sh
Builds/MacOSX/XRVST_Plugins.xcodeproj/: project.pbxproj
Builds/MacOSX/XRVST_Plugins.xcodeproj/xcshareddata/xcschemes/: XRVST_Plugins - VST3.xcscheme
Source/: JuceHeader.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: CompressionCurve.h  DelayLine.h  LevelEstimator.h  Utilities.h
Source/GUI/: CustomLookAndFeel.h  GainReductionMeter.h  TransferCurve.h
